--- a/styles.css
+++ b/styles.css
@@ -1011,6 +1011,7 @@ body {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    border-radius: 10px;
 }
 
 .product-info {
@@ -1259,7 +1260,7 @@ body {
         width: 100%;
         height: 100%;
         object-fit: contain;
-        padding: 10px;
+        border-radius: 10px;
     }
     /* Add more margin below search box */
     .search-box-form {
@@ -1558,8 +1559,8 @@ body {
         max-width: 100%;
     }
     .category-card img {
-        height: 135px;
-        width: 135px;
+        height: 100%;
+        width: 100%;
         object-fit: contain;
         margin-bottom: 0.5rem;
     }
